data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1282.wast
;; 3. **Test Description:** Create a WASM module with a function that possesses a loop with multiple nested blocks. Use `br` to branch out of a block and continue execution with a call to another module's function right from within the loop.    **Specific Constraint:** This test evaluates if backward jumps to loops are handled correctly with operands correctly managed.    **Relation to Control Flow Boundaries:** Ensures that intra-loop control flow and subsequent module call do not corrupt the stack or labels.

(assert_invalid
  (module
    (func $test (result i32)
      (loop $outer (result i32)
        (block $inner1 (result i32)
          (block $inner2 (result i32)
            (br 1)
          )
          (call 1)
        )
        (i32.const 0)
      )
    )
    (func (param i32) (result i32) (local.get 0))
  )
  "type mismatch"
)